fix: dark mode on safari

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -46,6 +46,10 @@
 
 @layer base {
     a { color: var(--link); }
+
+    html, body {
+        @apply bg-bg ;
+    }
 }
 
 
